--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@ body, input, textarea {
     font-family: "Roboto", sans-serif;
 }
 
-header{
+header {
     padding: 16px 0;
     background-color: #a4340f;
     color: #ecf0f1;
@@ -71,6 +71,7 @@ section h2 {
 
 section p {
     margin-bottom: 8px;
+    color: black;
 }
 
 
@@ -119,6 +120,7 @@ form textarea {
 
 section h3 {
     margin-bottom: 16px;
+    color: black;
 }
 
 form button {
@@ -142,6 +144,3 @@ footer {
     padding: 16px 0;
 }
 
-a:link {
-    text-decoration: none;
-}
